[gd_scene load_steps=2 format=3 uid="uid://mq8lonv11ksd"]

[ext_resource type="Script" path="res://Scripts/OptionsMenu.gd" id="1_y565l"]

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("soundSlider", "musicSlider")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y565l")
soundSlider = NodePath("VBoxContainer/SoundSlider")
musicSlider = NodePath("VBoxContainer/MusicSlider")

[node name="PauseMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 180.0
offset_right = 765.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 300.0
offset_right = 840.0
offset_bottom = 560.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.3
step = 0.05

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sounds"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.3
step = 0.05

[connection signal="pressed" from="PauseMenu" to="." method="_on_pause_menu_pressed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundSlider" to="." method="_on_h_slider_2_value_changed"]
